--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.header {
-  height: 105px;
-  background-color: #16abf8;
-  color: #fff;
-  display: flex;
-  align-items: center;
-}
-
 .container {
   max-width: 1000px;
 }
@@ -24,4 +16,44 @@
 .header .h2, .header h2 {
   font-size: 24px;
   font-weight: 700;
+}
+
+/* Header */
+.header {
+  height: 105px;
+  background-color: #16abf8;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+
+.todo-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 43px 0 55px;
+}
+
+.todo-header .btn {
+  min-width: 170px;
+  width: 170px;
+  height: 54px;
+}
+
+/* Button */
+.btn {
+  border-radius: 45px;
+  border: 0;
+  padding: 13.5px 29px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.btn.btn-primary {
+  background-color: #16abf8;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
 }
